--- a/main/templates/main/register.html
+++ b/main/templates/main/register.html
@@ -30,12 +30,8 @@
                 <div class="mb-3">
                     <label for="{{ field.id_for_label }}" class="form-label">{{ field.label }}</label>
                     {% if field.name == 'role' %}
-                        <div class="form-check">
-                            {% for radio in field %}
-                                <input type="radio" name="{{ radio.name }}" id="{{ radio.id_for_label }}" value="{{ radio.choice_value }}" {% if radio.is_checked %}checked{% endif %} class="form-check-input">
-                                <label class="form-check-label me-3" for="{{ radio.id_for_label }}">{{ radio.choice_label }}</label>
-                            {% endfor %}
-                        </div>
+                        {# Let Django render the RadioSelect widget directly #}
+                        {{ field }} 
                     {% else %}
                         <input type="{{ field.field.widget.input_type }}" name="{{ field.name }}" id="{{ field.id_for_label }}" class="form-control" required>
                     {% endif %}
